k8s/master/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fast-pos
  namespace: be
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
  selector:
    app: fast-pos
